--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
                     await RenderCustomNav(NavigationHelper.LoginCategory, true);
                 }
 
-                <img src="~/images/ataturk.png" style="height:75px;" />
+                <img src="~/images/ataturk_ve_bayrak.png" style="height:85px;" />
             }
 
         </div>
